Slight refactoring of variable names and structure

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "import dh\n",
+    "import dva\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -71,7 +71,7 @@
     "file_suffix = \".png\"\n",
     "num_particles = 500\n",
     "\n",
-    "dh.dynamical_heterogenity(images_to_load, cutoff, image_directory, file_prefix, file_suffix, num_particles)"
+    "dva.main(images_to_load, cutoff, image_directory, file_prefix, file_suffix, num_particles)"
    ]
   },
   {
